modified file by arohi

--- a/search.html
+++ b/search.html
@@ -1,14 +1,14 @@
 
-<!DOCTYPE html>
+< html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SportGear Pro | Find Your Perfect Sports Equipment</title>
+    <title>SportsGear Pro | Find Your Perfect Sports Equipment</title>
     <style>
         /* Reset and Base Styles */
         * {
-            margin: 0;
+            margin: 1;
             padding: 0;
             box-sizing: border-box;
             font-family: 'Arial', sans-serif;
@@ -19,7 +19,7 @@
             color: #333;
         }
 
-        /* Header Styles */
+        
         .header {
             background-color: #1a3e72;
             padding: 20px 0;
@@ -38,7 +38,7 @@
             font-weight: bold;
         }
 
-        /* Search Section */
+        
         .search-section {
             padding: 40px 0;
             background-color: #fff;
@@ -61,11 +61,11 @@
             padding: 15px;
             border: 2px solid #1a3e72;
             border-radius: 25px;
-            font-size: 16px;
+            font-size: 17px;
         }
 
         .search-btn {
-            padding: 15px 30px;
+            padding: 14px 31px;
             background-color: #1a3e72;
             color: white;
             border: none;
@@ -79,7 +79,7 @@
             background-color: #142d54;
         }
 
-        /* Filters */
+        /
         .filters {
             display: flex;
             flex-wrap: wrap;
