adding 8+ sports categories

--- a/sales.html
+++ b/sales.html
@@ -1,50 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sports Equipment Sale</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       background-color: #f5f5f5;
-      margin: 0;
+      margin: 40;
       padding: 20px;
     }
     .sale-banner {
       background: linear-gradient(135deg, #0d47a1, #1976d2);
-      color: grey;
+      color: green;
       padding: 40px 20px;
-      text-align: center;
-      border-radius: 13px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      text-align: left;
+      border-radius: 03px;
+      box-shadow: 0 10px 8px rgba(0,0,0,0.2);
     }
     .sale-banner h1 {
-      font-size: 38px;
-      margin-bottom: 11px;
+      font-size: 43px;
+      margin-bottom: 1px;
     }
     .sale-banner p {
-      font-size: 18px;
-      margin: 10px 0;
+      font-size: 29px;
+      margin: 40px 20;
     }
     .offers {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
-      margin-top: 30px;
+      margin-top: 3px;
     }
     .offer-card {
       background-color: white;
-      border-radius: 10px;
-      width: 300px;
+      border-radius: 8px;
+      width: 30px;
       margin: 20px;
       padding: 20px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      text-align: center;
+      text-align: left;
     }
     .offer-card h2 {
       color: #0d47a1;
-      margin-bottom: 10px;
+      margin-bottom: 1px;
     }
     .offer-card p {
       font-size: 16px;
@@ -52,7 +50,7 @@
     }
     .shop-now-btn {
       background-color: #ff6f00;
-      color: white;
+      color: black;
       padding: 12px 20px;
       border: none;
       border-radius: 6px;
@@ -95,6 +93,136 @@
       <a href="#" class="shop-now-btn">Shop Now</a>
     </div>
   </div>
+  <div class="offers">
+  <div class="offer-card">
+    <h2>Tennis Rackets</h2>
+    <p>Premium rackets with 35% discount - includes free grip tape</p>
+    <a href="#" class="shop-now-btn">Shop Now</a>
+  </div>
+
+  <div class="offer-card">
+    <h2>Basketball Gear</h2>
+    <p>Complete sets 45% Off - balls, hoops, and training equipment</p>
+    <a href="#" class="shop-now-btn">Shop Now</a>
+  </div>
+
+  <div class="offer-card">
+    <h2>Swimming Essentials</h2>
+    <p>30% Off goggles, caps, and training fins</p>
+    <a href="#" class="shop-now-btn">Shop Now</a>
+  </div>
+
+  <div class="offer-card">
+    <h2>Cycling Accessories</h2>
+    <p>Helmets and gloves bundle - Save $50</p>
+    <a href="#" class="shop-now-btn">Shop Now</a>
+  </div>
+
+  <div class="offer-card">
+    <h2>Boxing Equipment</h2>
+    <p>Heavy bags and gloves combo - 40% Off</p>
+    <a href="#" class="shop-now-btn">Shop Now</a>
+  </div>
+
+  <div class="offer-card">
+    <h2>Running Gear</h2>
+    <p>Hydration packs and belts - 25% Off</p>
+    <a href="#" class="shop-now-btn">Shop Now</a>
+  </div>
+
+  <div class="offer-card">
+    <h2>Camping Equipment</h2>
+    <p>Tents and sleeping bags - Up to 50% Off</p>
+    <a href="#" class="shop-now-btn">Shop Now</a>
+  </div>
+
+  <div class="offer-card">
+    <h2>Golf Clubs</h2>
+    <p>Premium sets with 30% discount - includes free bag</p>
+    <a href="#" class="shop-now-btn">Shop Now</a>
+  </div>
+</div>
+
+<section class="featured-brands">
+  <h2 style="text-align: center; color: #0d47a1; margin-top: 40px;">Featured Brands</h2>
+  <div style="display: flex; justify-content: center; flex-wrap: wrap; margin: 20px 0;">
+    <div style="margin: 15px; padding: 15px; background: white; border-radius: 8px;">
+      <img src="https://via.placeholder.com/150x80?text=Nike" alt="Nike">
+    </div>
+    <div style="margin: 15px; padding: 15px; background: white; border-radius: 8px;">
+      <img src="https://via.placeholder.com/150x80?text=Adidas" alt="Adidas">
+    </div>
+    <div style="margin: 15px; padding: 15px; background: white; border-radius: 8px;">
+      <img src="https://via.placeholder.com/150x80?text=Puma" alt="Puma">
+    </div>
+    <div style="margin: 15px; padding: 15px; background: white; border-radius: 8px;">
+      <img src="https://via.placeholder.com/150x80?text=Wilson" alt="Wilson">
+    </div>
+  </div>
+</section>
+
+<div class="testimonials" style="background: #e3f2fd; padding: 30px; border-radius: 10px; margin-top: 30px;">
+  <h2 style="text-align: center; color: #0d47a1;">What Our Customers Say</h2>
+  <div style="display: flex; flex-wrap: wrap; justify-content: space-around;">
+    <div style="background: white; padding: 20px; border-radius: 8px; width: 30%; margin: 10px; min-width: 250px;">
+      <p>"The cricket kit was amazing quality for the price!"</p>
+      <p>- Rajesh K.</p>
+    </div>
+    <div style="background: white; padding: 20px; border-radius: 8px; width: 30%; margin: 10px; min-width: 250px;">
+      <p>"Fast delivery and great customer service."</p>
+      <p>- Priya M.</p>
+    </div>
+    <div style="background: white; padding: 20px; border-radius: 8px; width: 30%; margin: 10px; min-width: 250px;">
+      <p>"My new yoga mat is perfect for daily practice."</p>
+      <p>- Amit S.</p>
+    </div>
+  </div>
+</div>
+
+<section class="newsletter" style="margin: 40px auto; max-width: 600px; text-align: center;">
+  <h2 style="color: #0d47a1;">Stay Updated</h2>
+  <p>Subscribe to our newsletter for exclusive deals</p>
+  <form style="margin-top: 20px;">
+    <input type="email" placeholder="Your email address" style="padding: 10px; width: 60%; border-radius: 4px; border: 1px solid #ccc;">
+    <button type="submit" style="padding: 10px 20px; background: #ff6f00; color: white; border: none; border-radius: 4px; margin-left: 10px;">Subscribe</button>
+  </form>
+</section>
+
+<div class="additional-info" style="background: #0d47a1; color: white; padding: 30px; border-radius: 10px; margin-top: 30px;">
+  <h2 style="text-align: center;">Why Choose Us?</h2>
+  <div style="display: flex; flex-wrap: wrap; justify-content: space-around; text-align: center;">
+    <div style="width: 22%; min-width: 200px; margin: 10px;">
+      <h3>Free Shipping</h3>
+      <p>On orders over $50</p>
+    </div>
+    <div style="width: 22%; min-width: 200px; margin: 10px;">
+      <h3>30-Day Returns</h3>
+      <p>No questions asked</p>
+    </div>
+    <div style="width: 22%; min-width: 200px; margin: 10px;">
+      <h3>Expert Advice</h3>
+      <p>From sports professionals</p>
+    </div>
+    <div style="width: 22%; min-width: 200px; margin: 10px;">
+      <h3>Secure Payments</h3>
+      <p>100% safe checkout</p>
+    </div>
+  </div>
+</div>
+
+
+
+<footer style="text-align: center; margin-top: 50px; padding: 20px; background: #e0e0e0; border-radius: 8px;">
+  <p>© 2025 Sports Equipment Sale. All rights reserved Contact Us: 080-895412.</p>
+  <div style="margin-top: 15px;">
+    <a href="#" style="margin: 0 10px; color: #0d47a1; text-decoration: none;">About Us</a>
+    <a href="#" style="margin: 0 10px; color: #0d47a1; text-decoration: none;">Contact</a>
+    <a href="#" style="margin: 0 10px; color: #0d47a1; text-decoration: none;">Privacy Policy</a>
+    <a href="#" style="margin: 0 10px; color: #0d47a1; text-decoration: none;">Terms</a>
+  </div>
+</footer>
+
+
 
 </body>
 </html>
