--- a/sales.html
+++ b/sales.html
@@ -7,11 +7,11 @@
       font-family: Arial, sans-serif;
       background-color: #f5f5f5;
       margin: 40;
-      padding: 20px;
+      padding: 25px;
     }
     .sale-banner {
       background: linear-gradient(135deg, #0d47a1, #1976d2);
-      color: green;
+      color: blue;
       padding: 40px 20px;
       text-align: left;
       border-radius: 03px;
